시큐리티 로그인과 시큐리티 세션 설정

--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -1,12 +1,17 @@
-{{> /layout/header}}
+{{> layout/header}}
 
 <div class="container p-5">
 
-    <!-- 수정삭제버튼 -->
-    <div class="d-flex justify-content-end">
-        <button class="btn btn-warning me-1">수정</button>
-        <button class="btn btn-danger">삭제</button>
-    </div>
+    {{#pageOwner}}
+        <!-- 수정삭제버튼 -->
+        <div class="d-flex justify-content-end">
+            <a href="/board/{{board.id}}/updateForm" class="btn btn-warning me-1">수정</a>
+            <form action="/board/{{board.id}}/delete" method="post">
+                <button class="btn btn-danger">삭제</button>
+            </form>
+        </div>
+    {{/pageOwner}}
+
     <div class="d-flex justify-content-end">
         <b>작성자</b> : {{board.username}}
     </div>
@@ -14,7 +19,7 @@
     <!-- 게시글내용 -->
     <div>
         <h2><b>{{board.title}}</b></h2>
-        <hr />
+        <hr/>
         <div class="m-4 p-2">
             {{board.content}}
         </div>
@@ -44,7 +49,7 @@
                     <div>댓글 내용입니다</div>
                 </div>
                 <form action="/reply/1/delete" method="post">
-                    <button class="btn">🗑</button>
+                    <button class="btn">??</button>
                 </form>
             </div>
             <!-- 댓글아이템 -->
@@ -54,11 +59,11 @@
                     <div>댓글 내용입니다</div>
                 </div>
                 <form action="/reply/1/delete" method="post">
-                    <button class="btn">🗑</button>
+                    <button class="btn">??</button>
                 </form>
             </div>
         </div>
     </div>
 </div>
 
-{{> /layout/footer}}
+{{> layout/footer}}
